# claude-ttrpg

./: .env.sample  .gitignore  README.md
engine/: pyproject.toml
engine/src/ttrpg_engine/: __init__.py  bookexport.py  chargen.py  checks.py  cli.py  clock.py  combat.py  derive.py  dice.py  errors.py  export.py  game.py  grid.py  inventory.py  level.py  markdown_render.py  quests.py  region_map.py  render.py  rest.py  serve.py  spells.py  story.py  story_log.py  timeline.py  travel.py  viewer.html  viewer_data.py  worldfs.py
engine/tests/: conftest.py  test_attack.py  test_bookexport.py  test_chargen.py  test_checks.py  test_cli_validation.py  test_dice.py  test_e2e.py  test_encounter.py  test_equip.py  test_export.py  test_feedback_hook.py  test_formation.py  test_game.py  test_gear_economy.py  test_grid_render.py  test_inventory.py  test_level.py  test_manual_dice.py  test_move.py  test_party_split.py  test_quests.py  test_reference_game.py  test_region_map.py  test_rest.py  test_revive.py  test_serve.py  test_spells.py  test_story.py  test_story_log.py  test_svg.py  test_tactics.py  test_targeting.py  test_timeline.py  test_travel.py  test_use.py  test_viewer_data.py  test_world.py  test_wounds.py
engine/tests/fixtures/minigame/: game.yaml
engine/tests/fixtures/minigame/content/: adventure.md  factions.yaml  history.md  npcs.yaml  quest-board.md  setting.md
engine/tests/fixtures/minigame/content/bestiary/: giant_bat.yaml  (+1 more)
engine/tests/fixtures/minigame/ruleset/: effects.yaml  features.yaml  items.yaml  progression.yaml  races.yaml  recovery.yaml  spells.yaml
(+169 files in other folders)
