[project]
name = "ttrpg-engine"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "pyyaml>=6",
    "markdown>=3.10.2",
]

[project.scripts]
engine = "ttrpg_engine.cli:app"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
